huge global code cleanup